@@ -1,3 +1,8 @@
+2003-02-25  Matthew Wilcox  <willy@debian.org>
+
+	* hppa-dis.c (print_insn_hppa <2 bit space register>): Do not print
+	the space register when the value is zero.
+
 2003-02-23  Elias Athanasopoulos  <elathan@phys.uoa.gr>
 
 	* mips-dis.c (print_mips_disassembler_options): Make 'i' unsigned,
